fix: deleted first duplicate z-index

--- a/client/src/components/Header/components/universal-nav.css
+++ b/client/src/components/Header/components/universal-nav.css
@@ -1,5 +1,4 @@
 .universal-nav {
-  z-index: 300;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
